# FRED

./: .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  create_heatmap.py  dash_utils.py  gse130699-mouse-cardiomyocytes_metadata.yaml  gse130699-mouse-cardiomyocytes_samples.txt  heatmap_dash.py  keys.yaml  mamplan_config.yaml  mamplan_keys.yaml  metaTools.py  mkdocs.yml  pyproject.toml  requirements.txt  test_heatmap.py  test_whitelists  validation_report_1680172530.txt
.github/workflows/: main.yml
docs/: add_factor.md  add_keys.md  add_whitelist.md  add_whitelist_values.md  generate.md  index.md  plots.md  search.md  structure.md  whitelists.md
docs/source/: conf.py  config.rst  generate.rst  index.rst  install.rst  plots.rst  search.rst  standalone.rst  structure.rst  whitelist.rst  whitelists.md
fred/: metaTools.py
fred/config/: config.yaml  mamplan_config.yaml
fred/src/: autogenerate.py  (+9 more)
src/: autogenerate.py  edit_file.py  file_reading.py  find_metafiles.py  generate.py  generate_file.py  generate_metafile.py  input_functions.py  metaTools_functions.py  run_file_reading.py  test_for_noah.py  utils.py  validate_yaml.py  wi_functions.py  wi_utils.py
test/: test_key_yaml.py  test_whitelists.py
whitelists/: abbreviations  cell_type  department  disease  disease.status  disease_stage  disease_status  disease_type  enrichment  ensembl_id  ethnicity  factor  flow  gene  gene_name  genotype  knockdown  life_stage  organism  reference_genome  stage  technique  tissue  treatment  treatment_status  treatment_type  unit  values
(+68 files in other folders)
